--- a/entry/20230830.md
+++ b/entry/20230830.md
@@ -1,3 +1,3 @@
-### 🎵 Foreground Eclipse - To The Terminus
+##### 🎵 Foreground Eclipse - To The Terminus
 
 Hello hello. Honestly this is just a test. Today was kinda annoying but I don't feel like tlaking about it LMFAO. Thanks maybe I'll write more later.
