--- a/entry/20230830.md
+++ b/entry/20230830.md
@@ -1,3 +1,6 @@
-##### 🎵 Foreground Eclipse - To The Terminus
+#### 2023-08-30
+##### 23:38
+
+##### ♪ Foreground Eclipse - To The Terminus
 
 Hello hello. Honestly this is just a test. Today was kinda annoying but I don't feel like tlaking about it LMFAO. Thanks maybe I'll write more later.
